fix/bbcollapsible button stretch and styling (#60)
* changed bb collapsible to button

* styling fix

* lint

--- a/src/bbcollapsible/styles.module.scss
+++ b/src/bbcollapsible/styles.module.scss
@@ -20,8 +20,6 @@ $grey-light: var(--grey-light, #f5f5f5);
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0.25rem 0.35rem;
-  border-radius: 50%;
 }
 
 /**
